Build bot from a JRE image